--- a/hw/tex/2018-07-04.tex
+++ b/hw/tex/2018-07-04.tex
@@ -40,8 +40,8 @@ $\lambda_2$ and $\lambda_3$, and let
 \[
   \hat{X}(\epsilon) =
   \begin{bmatrix}
-    v_2 \sqrt{\lambda_2} &
-    v_3 \sqrt{\lambda_3}
+    v_2 / \sqrt{\lambda_2} &
+    v_3 / \sqrt{\lambda_3}
   \end{bmatrix}
 \]
 This coordinate embedding is sometimes called a {\em Laplacian eigenmap}.
